# kigaroo-mood-mailer

./: .gitignore  README.md  example.env  get_mood_script.py  pyproject.toml
